5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1723_2499.log
== TEST (2019-05-09 11:37:06) 
-- CODE:
from math import*
k = float(input("Numero natural: "))

e = 1 + (1/factorial(1)+ (1/factorial(2) + (1/factorial(3) + ...
														  
-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:01) 
-- CODE:
from math import*
k = float(input("Numero natural: "))
n1 = k

-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:18:03) 
-- CODE:
from math import*
k = float(input("Numero natural: "))
n1 = k

-- EXECUTION TIME:
0.208346
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:

-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:

-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:18:04) 
-- CODE:
from math import*
k = float(input("Numero natural: "))
n1 = k

-- ERROR:
File "XXXX", line 6
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
